--chore:: fix widget display issue on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -139,6 +139,12 @@ body::-webkit-scrollbar:horizontal {
 	color: var(--app-color-black-a);
 }
 
+@media all and (max-width: 768px) {
+	iframe#nufi-widget {
+		height: 90vh !important;
+	}
+}
+
 @media all and (min-width: 768px) {
 	.app-contents {
 		display: flex;
